# ChangeLog for gnustep-base/gnustep-back-art
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-back-art/ChangeLog,v 1.51 2007/12/08 20:00:32 voyageur Exp $

  08 Dec 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/font-make-fix.patch-0.10.3, -files/font-make-fix.patch-0.11.0,
  -files/config-gnustep-back-art.sh, -gnustep-back-art-0.10.3.ebuild,
  -gnustep-back-art-0.11.0.ebuild:
  Remove old versions

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  sparc stable wrt #195990

  16 Nov 2007; Steve Dibb <beandog@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  amd64 stable, bug 195990

  27 Oct 2007; nixnut <nixnut@gentoo.org> gnustep-back-art-0.12.0.ebuild:
  Stable on ppc wrt bug 195990

  17 Oct 2007; Christian Faulhammer <opfer@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  stable x86, bug 195990

  03 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  Re-add ~sparc wrt #189372

  10 Sep 2007; Joseph Jezak <josejx@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  Marked ~ppc for bug #189372.

  06 Sep 2007; Bernard Cafarelli <voyageur@gentoo.org>
  -files/font-make-fix.patch-0.9.5, -gnustep-back-art-0.9.5.ebuild,
  -gnustep-back-art-0.9.6-r1.ebuild:
  Remove old versions, bug #139385

  06 Sep 2007; Raúl Porcel <armin76@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  Add ~alpha wrt #189372

  05 Sep 2007; Joseph Jezak <josejx@gentoo.org>
  gnustep-back-art-0.11.0.ebuild:
  Marked ppc stable for bug #139385.

  22 Aug 2007; Bernard Cafarelli <voyageur@gentoo.org>
  gnustep-back-art-0.12.0.ebuild:
  Better nfonts creation command, correct path for mknfonts

*gnustep-back-art-0.12.0 (18 Aug 2007)

  18 Aug 2007; Fabian Groffen <grobian@gentoo.org>
  +gnustep-back-art-0.12.0.ebuild:
  Bump from GNUstep overlay.  Using new gnustep eclasses

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;