@@ -1,4 +1,6 @@
 DIST gnustep-back-0.12.0.tar.gz 853996 RMD160 ad19420127bb0e2e5f7dc9c3cf9974ea06255565 SHA1 859aef314eb9ef5cbedad9dc53a818542baa17ec SHA256 59b000aa069e2a50398b31296ce5d663f98fc8d131bfd8f3d10e29b0a5379a45
+DIST gnustep-back-0.12.1.tar.gz 861961 RMD160 7970dfeebd12facb52aa6ba4dd2f06406dbdae74 SHA1 f4505126bbb8a7ca3664a8c5fb86c505ba1eef47 SHA256 c7eb3e0ee3f6b1224aacdcd8052f99d3ec58c94c8f21c6b4b888a2bb5bc97611
 EBUILD gnustep-back-art-0.12.0.ebuild 2187 RMD160 573eca91ab38a8c45f708dc5e60ac63d74e73775 SHA1 530963dff1750089a8824794ac48ed88d556c0d3 SHA256 7369a0288691023d674e4a12e8223fc3a56c8acd51923b4fc3fffa8b7862c0e4
-MISC ChangeLog 9216 RMD160 5b6b5e8ebcf764808763956f159aa3ad7659f6e2 SHA1 f0a32f092e5e64a3e9109e0bb5d33e05bd7bbceb SHA256 4eace52a0861359035326ebda6f3a8a1b607bef4bfcfdca2c10a79801e522c71
+EBUILD gnustep-back-art-0.12.1.ebuild 2188 RMD160 768081694e850653d3feb0af6788c588c930e2bd SHA1 acc1472a3805f789588584a64b037da75b67e289 SHA256 25c01dbd950df6330c45c9a7c4c82985ed91dbd67a2f904aedcbf3fe9c47c792
+MISC ChangeLog 9369 RMD160 1a41b323118351527644233f3b09c88e39dd4f47 SHA1 b04c39ca5acf326d8caf7e40cf2ba39c15a4c7bf SHA256 b1d6f3a5a78e52712865ef7bde210bafc41464680668b21b6af7a686596940d3
 MISC metadata.xml 1030 RMD160 96446c9b908e06aacce3b93a26117f7ff770e1da SHA1 031082229b3c5a2b6f96b592282c59fc2e48154e SHA256 4460a15f6e1831906348e0bdb6f0853fb286384f110da52874f6ae7d597236df
