@@ -1,6 +1,12 @@
 # ChangeLog for gnustep-base/gnustep-back-art
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-back-art/ChangeLog,v 1.51 2007/12/08 20:00:32 voyageur Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnustep-base/gnustep-back-art/ChangeLog,v 1.52 2008/01/03 12:35:09 voyageur Exp $
+
+*gnustep-back-art-0.12.1 (03 Jan 2008)
+
+  03 Jan 2008; Bernard Cafarelli <voyageur@gentoo.org>
+  +gnustep-back-art-0.12.1.ebuild:
+  Stable version bump
 
   08 Dec 2007; Bernard Cafarelli <voyageur@gentoo.org>
   -files/font-make-fix.patch-0.10.3, -files/font-make-fix.patch-0.11.0,
